--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,10 @@
       body {
         margin: 0;
       }
+
+      body::-webkit-scrollbar {
+        width: 0px;
+      }
   </style>
   </head>
   <body>
